<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Teamface</string>
    <string name="name">名字</string>
    <string name="password">密码</string>
    <string name="next">下一步</string>
    <string name="edit">编辑</string>
    <string name="cancel_relevant">取消关联</string>
    <string name="del">删除</string>
    <string name="create">新增</string>
    <string name="confirm">确定</string>
    <string name="commit">提交</string>
    <string name="finish">完成</string>
    <string name="save">保存</string>
    <string name="settings">设置</string>
    <string name="reset">重置</string>
    <string name="add_new">新增</string>
    <string name="select">选择</string>
    <string name="cancel">取消</string>
    <string name="clean">清除</string>
    <string name="add">添加</string>
    <string name="send">发送</string>
    <string name="screening">筛选</string>
    <string name="approval">审批</string>
    <string name="comment">评论</string>
    <string name="dynamic">动态</string>
    <string name="title_department">部门</string>
    <string name="title_leader">上级</string>
    <string name="title_post">职务</string>
    <string name="title_gender">性别</string>
    <string name="title_birthday">生日</string>
    <string name="title_address">地址</string>
    <string name="title_region">地区</string>
    <string name="title_email">邮件</string>
    <string name="title_email_box">邮箱</string>
    <string name="email">邮件</string>
    <string name="approve">审批</string>
    <string name="email_box">邮件</string>
    <string name="take_photo">拍照</string>
    <string name="text_picture">相册</string>
    <string name="text_file">文件</string>
    <string name="project">项目</string>
    <string name="task">任务</string>
    <string name="statistic">统计</string>
    <string name="share">分享</string>
    <string name="library">文库</string>
    <string name="undefined">未设置</string>
    <string name="network_disconnect">网络中断，请检查您的网络状态</string>
    <string name="connect_server_timeout">连接服务器超时</string>
    <string name="server_error">服务器内部错误，请稍后再试！</string>
    <string name="unknown_error">未知错误</string>
    <string name="request_error">请求错误</string>
    <string name="data_error">数据异常</string>
    <string name="data_error2">数据错误</string>
    <string name="null_point_error">空指针异常</string>
    <string name="index_out_of_bounds_error">数组越界异常</string>
    <string name="file_not_support_hint">无法打开该类型的文件</string>
    <string name="team_message">企信</string>
    <string name="record_voice_hint">按住 说话</string>
    <string name="cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="send_voice_hint">松开 结束</string>
    <string name="move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="rest_record_time_hint">还可以说%s秒</string>
    <string name="time_too_short_toast">时间太短！</string>
    <string name="create_file_failed">创建文件失败</string>
    <string name="record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_cancle_send">松开手指，取消发送</string>
    <string name="chat_image">图片</string>
    <string name="chat_photo">拍摄</string>
    <string name="im_pin_top">置顶</string>
    <string name="jmui_loading">加载中</string>
    <string name="jmui_username">用户名</string>
    <string name="jmui_registering">注册中</string>
    <string name="jmui_register_success">注册成功</string>
    <string name="jmui_login">登录</string>
    <string name="jmui_logging">登录中</string>
    <string name="jmui_login_success">登录成功</string>
    <string name="sdcard_not_exist_toast">暂无外部存储</string>
    <string name="say_something">说点什么吧...</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是华信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="format_version">版本%s</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_chat_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">删除此聊天</string>
    <string name="im_delete">删除</string>
    <string name="Clear_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">消息免打扰</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="user_name">用户名</string>
    <string name="no_search_result">没有找到相关记录~</string>
    <string name="file_search_hint">输入关键字</string>
    <string name="next_step">下一步</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint">提示</string>
    <string name="please_select_hint">请选择</string>
    <string name="please_input_hint">请输入</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="jmui_clear_history_confirm_title">确定清空聊天记录？</string>
    <string name="jmui_delete_group_confirm_title">确定删除并退出群聊？</string>
    <string name="jmui_resend_message_hint">确定重发消息?</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_delete">删除</string>
    <string name="jmui_cancel">取消</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="im_all">全部</string>
    <string name="im_remove_success_hint">移除成功!</string>
    <string name="im_remove_failed_hint">移除失败!</string>
    <string name="im_remove_notification1"> %s 被群主移出了群!</string>
    <string name="im_group_name_err_hint">群名字长度为1-12个字符</string>
    <string name="im_group_chat_list">我的群聊</string>
    <string name="im_choose_module_title">选择需要筛选的模块</string>
    <string name="im_no_search_result">没有找到相关记录~</string>
    <string name="im_no_search_result_group">没有找到相关群聊~</string>
    <string name="im_no_search_result_contact">没有找到相关同事~</string>
    <string name="im_no_search_result_chat">没有找到相关消息~</string>
    <string name="im_searching">正在搜索~</string>
    <string name="im_search_failed">搜索失败~</string>
    <string name="im_group_chat_notice_hint">请输入群聊公告100字以内（选填）</string>
    <string name="im_chat_history">聊天记录</string>
    <string name="im_quit_group_chat">退出群聊</string>
    <string name="im_copy_success">复制成功</string>
    <string name="im_dissmiss_group_chat">解散群聊</string>
    <string name="im_add_group_member">添加群成员</string>
    <string name="im_choose_group_member">选择成员</string>
    <string name="im_choose_remind_member">选择提醒人</string>
    <string name="im_choose_new_admin">选择新群主</string>
    <string name="im_group_chat">选择群聊</string>
    <string name="im_choose_a_group_chat">选择一个群</string>
    <string name="im_send_to_sb">转发给</string>
    <string name="im_create_a_gingle_chat">发起聊天</string>
    <string name="im_send_email">发邮件</string>
    <string name="select_contact">选择联系人</string>
    <string name="im_send_message_failed">发送失败!</string>
    <string name="im_add_member_menu">添加</string>
    <string name="im_remove_member_menu">移除</string>
    <string name="im_remove_group_member">移除群成员</string>
    <string name="im_group_chat_notice">群聊公告</string>
    <string name="im_create_group_chat_hint">群名称12个字以内 (必填)</string>
    <string name="im_create_group_chat">创建群聊</string>
    <string name="im_create_group_chat_fail">创建群聊失败!</string>
    <string name="im_create">创建</string>
    <string name="im_input_text_hint">说点什么</string>
    <string name="im_search_hint">搜索</string>
    <string name="im_unread_99_plus">99+</string>
    <string name="jmui_about">关于</string>
    <string name="jmui_send">发送</string>
    <string name="jmui_chat">聊天</string>
    <string name="jmui_single_chat">单聊</string>
    <string name="jmui_group_chat">群聊</string>
    <string name="jmui_picture">相册</string>
    <string name="jmui_take_photo">拍照</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">定位</string>
    <string name="jmui_business_card">名片</string>
    <string name="jmui_phone">电话</string>
    <string name="jmui_file">文件</string>
    <string name="jmui_file_lib">文库</string>
    <string name="jmui_at">\@成员</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="jmui_file_fetch_failed">文件获取失败</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="group">群聊</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_user_already_exist_toast">用户已经退出</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_file_not_found_toast">文件丢失</string>
    <string name="jmui_camera_not_prepared">摄像头尚未准备好</string>
    <string name="draft">[草稿]</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="type_file">[文件]</string>
    <string name="type_video">[视频]</string>
    <string name="send_location">发送地理位置</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="friend_request_title">新朋友</string>
    <string name="friend_info">好友信息</string>
    <string name="unnamed">未命名</string>
    <string name="added">已添加</string>
    <string name="version_name">当前版本:%s</string>
    <string name="chat_peoples_num">目前已有1名参与人</string>
    <string name="chat_detail_add">添加</string>
    <string name="combine_title">(%s)</string>
    <string name="chat_detail_title">聊天详情</string>
    <string name="members_in_chat">聊天成员</string>
    <string name="phone">手机</string>
    <string name="fixed_phone">座机</string>
    <string name="birthday_">生日</string>
    <string name="sex">性别</string>
</resources>