<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/__picker_gray_f2"
            android:fadingEdge="vertical"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_head_portrait"
            style="@style/userInfoItemLL"
            android:layout_height="60dp"
            android:layout_marginTop="8dp">

            <TextView
                style="@style/userInfoItemLeftTv"
                android:text="@string/head_portrait"/>

            <ImageView
                android:id="@+id/iv_head_portrait"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/iv_head_arrow"
                style="@style/newItemRightIv"/>
        </LinearLayout>

        <include layout="@layout/line_margin"/>

        <LinearLayout
            android:id="@+id/ll_sex"
            style="@style/userInfoItemLL">

            <TextView
                style="@style/userInfoItemLeftTv"
                android:text="@string/sex"/>

            <TextView
                android:id="@+id/tv_sex"
                style="@style/userInfoItemRightTv"
                android:hint="@string/Not_Set"/>

            <ImageView
                android:id="@+id/iv_sex_arrow"
                style="@style/newItemRightIv"/>
        </LinearLayout>

        <include layout="@layout/line_margin"/>

        <LinearLayout
            android:id="@+id/ll_birthday"
            style="@style/userInfoItemLL">

            <TextView
                style="@style/userInfoItemLeftTv"
                android:text="@string/birthday_"/>

            <TextView
                android:id="@+id/tv_birthday"
                style="@style/userInfoItemRightTv"
                android:hint="@string/Not_Set"/>

            <ImageView
                android:id="@+id/iv_birthday_arrow"
                style="@style/newItemRightIv"/>
        </LinearLayout>

        <include layout="@layout/line_margin"/>

        <LinearLayout
            android:id="@+id/ll_location"
            style="@style/userInfoItemLL">

            <TextView
                style="@style/userInfoItemLeftTv"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/tv_location"
                style="@style/userInfoItemRightTv"
                android:hint="@string/Not_Set"/>

            <ImageView
                android:id="@+id/iv_location_arrow"
                style="@style/newItemRightIv"/>
        </LinearLayout>

        <include layout="@layout/line_margin"/>

        <LinearLayout
            style="@style/userInfoItemLL"
            android:layout_marginTop="8dp">

            <TextView
                style="@style/userInfoItemLeftTv"
                android:text="@string/phone"/>

            <TextView
                android:id="@+id/tv_phone"
                style="@style/userInfoItemRightTv"
                tools:text="134 2332 6326"/>

            <ImageView
                android:id="@+id/iv_phone_arrow"
                style="@style/newItemRightIv"
                android:visibility="gone"/>

        </LinearLayout>

        <include layout="@layout/line_margin"/>

        <LinearLayout style="@style/userInfoItemLL">

            <TextView
                style="@style/userInfoItemLeftTv"
                android:text="@string/fixed_phone"/>

            <TextView
                android:id="@+id/tv_fixed_phone"
                style="@style/userInfoItemRightTv"
                tools:text="134 2332 6326"/>

            <ImageView
                android:id="@+id/iv_fix_phone_arrow"
                style="@style/newItemRightIv"/>

        </LinearLayout>

        <include layout="@layout/line_margin"/>

        <LinearLayout style="@style/userInfoItemLL">

            <TextView
                style="@style/userInfoItemLeftTv"
                android:text="@string/email_box"/>

            <TextView
                android:id="@+id/tv_email"
                style="@style/userInfoItemRightTv"
                tools:text="13443326326@163.com"/>

            <ImageView
                android:id="@+id/iv_email_arrow"
                style="@style/newItemRightIv"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>