<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_deadline"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:inputType="number"
        android:hint="@string/please_input_hint"
        android:paddingEnd="15dp"
        android:paddingStart="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="选择时间单位"
        android:textColor="@color/black_22"
        android:textSize="@dimen/text_size_16" />

    <include layout="@layout/line_margin" />


    <RelativeLayout
        android:id="@+id/rl_before_deadline_minute"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/minute"
            android:textColor="@color/_424242"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_before_deadline_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_before_deadline_hour"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/hour"
            android:textColor="@color/_424242"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_before_deadline_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_before_deadline_day"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/day"
            android:textColor="@color/_424242"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_before_deadline_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>
</LinearLayout>
