<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_create_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/icon_blue_chat"
                android:gravity="center"
                android:text="@string/im_create_a_gingle_chat"
                android:textColor="@color/main_green"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray_f2"/>

        <RelativeLayout
            android:id="@+id/rl_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_send_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/icon_blue_email"
                android:gravity="center"
                android:text="@string/im_send_email"
                android:textColor="@color/main_green"
                android:textSize="16sp"/>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray_f2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/mine_top_rl"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_dialog_input"
                android:elevation="10dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="110dp">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="25dp"
                        tools:src="@drawable/ic_expression_hover"/>

                    <RelativeLayout
                        android:id="@+id/rl_user_info"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_toStartOf="@+id/iv_avatar">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:textColor="@color/gray_4a"
                            android:textSize="16sp"
                            tools:text="彭华娣"/>

                        <ImageView
                            android:id="@+id/gender"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_alignBottom="@+id/name"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@+id/name"
                            android:visibility="gone"
                            tools:src="@drawable/icon_female"
                            tools:visibility="visible"/>

                        <TextView
                            android:id="@+id/tv_sign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/name"
                            android:layout_marginTop="8dp"
                            android:textColor="#666666"
                            android:textSize="14sp"
                            tools:text="从事人类事业长达25年！"/>
                    </RelativeLayout>


                </RelativeLayout>

                <include
                    layout="@layout/line"
                    android:visibility="invisible"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true">


                    <RelativeLayout
                        android:id="@+id/rl_like"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="25dp"
                            android:drawablePadding="5dp"
                            android:textColor="@color/gray_69"
                            android:textSize="14sp"
                            tools:text="999"/>

                        <ImageView
                            android:id="@+id/icon_like"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="2dp"
                            android:layout_toLeftOf="@+id/like"
                            tools:layout_toLeftOf="@id/like"
                            tools:src="@drawable/heart_red"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@id/rl_like"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp">

                        <TextView
                            android:id="@+id/department"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:ellipsize="end"
                            android:lines="1"
                            android:textColor="@color/gray_69"
                            android:textSize="14sp"
                            tools:text="公司"/>
                    </RelativeLayout>

                </RelativeLayout>

                <include layout="@layout/line_margin_10dp"/>

            </LinearLayout>

            <LinearLayout style="@style/userInfoItemLL">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/title_department"/>

                <TextView
                    android:id="@+id/tv_department"
                    style="@style/userInfoItemRightTv"
                    android:hint="@string/undefined"
                    tools:text="部门"/>
            </LinearLayout>

            <include layout="@layout/line_margin"/>

            <LinearLayout
                style="@style/userInfoItemLL"
                android:visibility="gone">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/title_leader"/>

                <TextView
                    android:id="@+id/tv_leader"
                    style="@style/userInfoItemRightTv"
                    android:hint="@string/undefined"
                    tools:text="上级"/>
            </LinearLayout>

            <include layout="@layout/line_margin"/>

            <LinearLayout style="@style/userInfoItemLL">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/title_post"/>

                <TextView
                    android:id="@+id/tv_post"
                    style="@style/userInfoItemRightTv"
                    android:hint="@string/undefined"
                    tools:text="职务"/>
            </LinearLayout>

            <include layout="@layout/line_margin_10dp"/>

            <LinearLayout
                style="@style/userInfoItemLL"
                android:visibility="gone">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/title_gender"/>

                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/userInfoItemRightTv"
                    android:hint="@string/undefined"
                    tools:text="男"/>
            </LinearLayout>

            <include layout="@layout/line_margin"/>

            <LinearLayout
                style="@style/userInfoItemLL"
                android:visibility="gone">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/title_birthday"/>

                <TextView
                    android:id="@+id/tv_birthday"
                    style="@style/userInfoItemRightTv"
                    android:hint="@string/undefined"
                    tools:text="生日"/>
            </LinearLayout>

            <include layout="@layout/line_margin"/>

            <LinearLayout
                style="@style/userInfoItemLL"
                android:visibility="gone">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/title_region"/>

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/userInfoItemRightTv"
                    android:hint="@string/undefined"
                    tools:text="地址"/>
            </LinearLayout>

            <include
                layout="@layout/line_margin_10dp"
                android:visibility="gone"/>

            <LinearLayout style="@style/userInfoItemLL">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/phone"/>

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/userInfoItemRightTv"
                    android:textColor="@color/phone_color"
                    tools:text="13423326326"/>
                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/persioninfo_phone"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    />

            </LinearLayout>

            <include layout="@layout/line_margin"/>

            <LinearLayout style="@style/userInfoItemLL">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/fixed_phone"/>

                <TextView
                    android:id="@+id/tv_fixed_phone"
                    style="@style/userInfoItemRightTv"
                    android:textColor="@color/phone_color"
                    tools:text="0755-66889999-066"/>
                <ImageView
                    android:id="@+id/iv_fixed_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/persioninfo_local_phone"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    />

            </LinearLayout>

            <include layout="@layout/line_margin"/>

            <LinearLayout style="@style/userInfoItemLL">

                <TextView
                    style="@style/userInfoItemLeftTv"
                    android:text="@string/title_email_box"/>

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/userInfoItemRightTv"
                    android:hint="@string/undefined"
                    tools:text="13443326326@163.com"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
